--- a/__example.env
+++ b/__example.env
@@ -4,3 +4,15 @@
 
 # NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_b3B0aW11bfasdfwq3qfdsavcadsfjY291bnRzLmRldiQ
 # CLERK_SECRET_KEY=sk_test_lmDYN7m42mhvU3wrfsdfvsdafscoWGbC7lj
+
+
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="dksfjaoijgfoiahv_sql"
