--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.10",
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "^6.3.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -33,7 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.22",
     "postcss": "^8",
-    "prisma": "^6.2.1",
+    "prisma": "^6.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
